--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,18 @@ html {
     -o-background-size: cover;
     background-size: cover;
   }
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Ubuntu", sans-serif;
+  }
+
+  input,
+button {
+  appearance: none;
+  border: none;
+  outline: none;
+  background: none;
+  cursor: pointer;
+}
