--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,7 @@ button:hover:enabled{
     cursor: pointer;
     background-color: transparent;
     box-shadow: -2px 2px black;
+    margin-top: .5rem;
 }
 
 #source-code-btn:hover:enabled{
