--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,21 @@
   --lightWhite: #f6f5f5;
 }
 
+@keyframes transitionIn {
+  from {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+body{
+  animation: transitionIn 1s;
+}
+
 html {
   background: url("imgs/backroundImg.jpg") no-repeat center center fixed;
   -webkit-background-size: cover;
@@ -161,6 +176,6 @@ button:hover:enabled{
   transition: 1.2s all ease;
 }
 .reveal.active{
-  transform: translateY(0);
+  transform: translatex(0);
   opacity: 1;
 }
