--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
   --lighterBlue: #1687a7;
   --lighestBlue: #d3e0ea;
   --lightWhite: #f6f5f5;
-  --space: 150px;
+  --space: 200px;
   --tall: 620px;
 }
 
@@ -17,9 +17,6 @@
     opacity: 1;
     transform: translateY(0);
   }
-}
-body{
-  animation: transitionIn 1s;
 }
 
 html {
@@ -60,6 +57,10 @@ nav{
     justify-content:space-around;
     padding-top: .5rem;
     padding-bottom: .5rem;
+    width: 100%;
+    overflow: hidden;
+    position: fixed;
+    top: 0;
 }
 
 header{
@@ -69,9 +70,9 @@ header{
     padding-top: .5rem;
     padding-bottom: .5rem;
     overflow-wrap: break-word;
-    width: 847px;
+    width: 70vw;
     margin: auto;
-    margin-top: 32px;
+    margin-top: 94px;
     margin-bottom: var(--space);
     height: 620px;
     align-items: center;
@@ -80,7 +81,7 @@ header{
 }
 
 .section{
-  width: 847px;
+  width: 70vw;
   margin-bottom: 32px;
   padding: 1rem;
 }
@@ -113,7 +114,7 @@ button{
     box-shadow: -2px 2px var(--lighestBlue);
 }
 
-button:hover:enabled{
+button:hover{
   transform: translateY(-0.25em);
   box-shadow: -2px 4px var(--lighestBlue);
 }
@@ -126,7 +127,7 @@ button:hover:enabled{
     margin-top: .5rem;
 }
 
-#source-code-btn:hover:enabled{
+#source-code-btn:hover{
   transform: translateY(-0.25em);
   box-shadow: -2px 4px black;
 }
@@ -155,6 +156,7 @@ button:hover:enabled{
   align-items: center;
 }
 #projects-grid{
+  width: 100%;
   justify-content: space-evenly;
   display: flex;
   margin-top: 1rem;
@@ -162,13 +164,17 @@ button:hover:enabled{
 
 #projects-grid > div{
   border: 1px solid black;
-  width: 16rem;
   height: 14rem;
+  width: 25%;
 }
 .project-item{
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
+}
+
+.project-item:hover{
+  transform: translateY(-1em);
 }
 
 #weather-app{
