--- a/styles.css
+++ b/styles.css
@@ -162,9 +162,8 @@ button:hover{
 }
 
 #projects-grid > div{
-  border: 1px solid black;
   height: 14rem;
-  width: 25%;
+  width: 14rem;
 }
 .project-item{
   background-position: center;
