--- a/styles.css
+++ b/styles.css
@@ -206,3 +206,25 @@ textarea{
   height: 45%;
   width: 50%;
 }
+@media (max-width:650px){
+  nav{
+    flex-direction: column;
+    align-items: center;
+  }
+  nav>p{
+    margin-bottom: 10px;
+  }
+  header{
+    flex-direction: column;
+    height: fit-content;
+  }
+  .description{
+    width: auto;
+    text-align: center;
+    margin: 0;
+  }
+
+  .section{
+    height: fit-content;
+  }
+}
