--- a/styles.css
+++ b/styles.css
@@ -11,12 +11,12 @@
 @keyframes transitionIn {
   from {
     opacity: 0;
-    transform: translateY(-10px);
+    transform: translateX(-100px);
   }
 
   to {
     opacity: 1;
-    transform: translateY(0);
+    transform: translateX(0);
   }
 }
 
@@ -79,6 +79,7 @@ header{
     align-items: center;
     padding-left: 5rem;
     padding-right: 5rem;
+    animation: transitionIn 1s;
 }
 
 .section{
