--- a/styles.css
+++ b/styles.css
@@ -174,6 +174,7 @@ button:hover{
   background-repeat: no-repeat;
 }
 
+
 .project-item:hover{
   transform: translateY(-1em);
 }
@@ -199,6 +200,9 @@ button:hover{
 }
 .my-story{
   background-color: var(--lightWhite);
+  width: 80vw;
+  margin: auto;
+  padding:25px;
 }
 
 input[type=text],input[type=email]{
